tests/NormalTests/paczka1/fuzzy1/80954448.err
Error in line 9: yGOjfW A986 76,6
Error in line 15: S346 S805 2,2
Error in line 21: tLS3JrOi3 S629 99,0
Error in line 11: yGOjfW S805 51,3
Error in line 13: kGD S805 78,6
Error in line 38: S346 S629 91,9
